# inference-fast-api

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  type_hints.py
api/: Dockerfile  package.json  pyproject.toml  serverless.yml
api/functions/: text_detection.py
couldformation/: acm.yml  api.yml  s3.yml  worker.yml
lib/: aws_resource.py  binary_data.py  object_key.py  s3_client.py  sqs_client.py
schemas/: api_model.py  sqs_message.py  sqs_receiver.py  webhook_response.py
test/api/: test_lambda.py
test/lib/: test_object_key.py  test_s3_client.py  test_sqs_client.py
worker/: Dockerfile  Dockerfile.dev  docker-compose.yml  env.yaml  main.py  pyproject.toml
worker/.ebextensions/: option_settings.config.tmp
worker/.elasticbeanstalk/: config.yml
worker/.platform/hooks/prebuild/: 00_kernel_livepatch_plugin_install.sh  01_modelfile_and_env_setting.sh
worker/eb/: eb_create.sh  eb_deploy.sh
worker/models/: analysis_result.py  sample_detection_analysis.py
worker/routers/: dependencies.py  sqs_receiver.py
